Reverted amqp for events; cleaned up legacy system services